# nhhc_workplace_management_system

./: .bandit  .codacy.yaml  .dockerignore  .env.vault  .gitignore  .pre-commit-config.yaml  .prospector  .sourcery.yaml  CODE_OF_CONDUCT.md  CacheAndAppContainerDockerfile  CeleryWorker.Dockerfile  Dockerfie_test.yaml  Dockerfile  Dockerfile_test.yaml  Makefile  README.md  SECURITY.md  Taskfile.yml  \  async_worker_log  async_worker_log.db  carenett_testing  configure.sh  constraints.txt  cypress.config.js  digital_ocean_postgres_ssl.crt  docker-compose.yaml  docker_requirements.txt  entrypoint.sh  eslint.config.js  example.env  init.sh  nhhc.json  node_exporter.service  package-lock.json  package.json  private_key.pem  project_structure.html  project_structure.json  prometheus.yml  (+14 more)
nhhc/: .sourcery.yaml  Makefile  async_worker_log  async_worker_log.db  async_worker_log.sqlite  flower  init.sh  manage.py  monkeytype.sqlite3  nohup.out  pyproject.toml  pyvenv.cfg  requirement.txt  selftest-cert.crt  selftest-cert.key  server-key.pem  server-req.pem
nhhc/announcements/: forms.py  models.py  urls.py  views.py
nhhc/announcements/migrations/: 0001_initial.py  0002_announcements_posted_by.py  0002_initial.py  0003_alter_announcements_options_and_more.py  0003_alter_announcements_posted_by.py  0003_alter_announcements_status.py
nhhc/announcements/templates/: _announcements.html  annoucements-details.html  annoucements.html  new_annoucement.html
nhhc/announcements/templatetags/: recent_announcements.py
nhhc/authentication/: config.py  forms.py  models.py  tests.py  urls.py  views.py
nhhc/authentication/migrations/: 0001_initial.py  0002_initial.py  0003_alter_userprofile_last_password_change.py
nhhc/compliance/: .py  forms.py  models.py  tasks.py  urls.py  views.py
nhhc/compliance/migrations/: 0001_initial.py  0002_alter_compliance_aps_check_verification_and_more.py  0002_alter_contract_options_contract_active_and_more.py  0002_compliance_employee.py  0002_initial.py  0003_alter_compliance_aps_check_verification_and_more.py  0003_remove_compliance_id_and_more.py
nhhc/compliance/templates/: compliance_details.html  compliance_forms.html  docuseal.html  succeessful_update.html
nhhc/compliance/tests/: test_views.py
nhhc/docs/: README.md  _navbar.md  _sidebar.md  index.html  overview.md
nhhc/docs/applicant_management/: _navbar.md  applicant_service_request_overview.md  rejecting.md
nhhc/docs/compliance/: _navbar.md  audit.md  compliance.md
nhhc/docs/employee_management/: employee.md  process_overview.md  promotions.md
nhhc/employee/: forms.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
nhhc/employee/migrations/: 0001_initial.py  0002_alter_employee_cpr_verification.py  0002_alter_employee_cpr_verification_and_more.py  0002_alter_employee_options.py  0002_initial.py  0002_rename_street_address_employee_street_address1_and_more.py  0003_alter_employee_dhs_i9_and_more.py  0003_alter_employee_managers.py  0003_alter_employee_qualifications_verification.py  0003_employee_termination_date.py  0003_merge_0002_initial_encrypt_db.py  0004_alter_employee_cpr_verification_and_more.py  0004_employee_sms_contact_agreement_and_more.py  0004_remove_employee_id_employee_employee_id.py  0005_alter_employee_unique_together.py  0005_employee_sms_contact_number_and_more.py  0005_employee_username_idx_employee_first_name_idx.py  0006_alter_employee_cpr_verification_and_more.py  0006_alter_employee_ethnicity_alter_employee_language_and_more.py  0006_alter_employee_username.py  0007_employee_application_id.py  0007_remove_employee_date_joined_employee__date_joined_and_more.py  0008_alter_employee_application_id.py  0009_alter_employee_application_id.py  0010_userprofile.py  0011_delete_userprofile.py  encrypt_db.py
nhhc/employee/templates/: employee-detail.html  employee-details.html  employee-listing.html  uploaded_documents.html
nhhc/employee/templatetags/: calculate_tenure.py
nhhc/employee/tests/: test_models.py  test_views.py
nhhc/lambda/: 1-install.sh  2-package.sh  Dockerfile  lambda_constraints.txt
nhhc/lambda/DocSealAttestationProcessing/: 1-install.sh  docseal.py  lambda_constraints.txt  lambda_function.py  link_model.py
nhhc/lambda/layer/: 2-package.sh
nhhc/lambda/recieve_new_docseal_document/: lambda_function.py
nhhc/logs/: healthcheck_log_reviewer.py
nhhc/nhhc/: __init__.py  admin.py  apm.py  asgi.py  celery.py  server.py  settings.py  signals.py  status.py  storage_backends.py  test-settings.py  test_settings.py  testing_utils.py  urls.py  utils.py  validators.py  wsgi.py
nhhc/nhhc/backends/: storage_backends.py
nhhc/nhhc/middleware/: maintenance.py  password_change.py
nhhc/nhhc/utils/: cache.py  context_processors.py  email_templates.py  feature_flags.py  helpers.py  mailer.py  managers.py  metrics.py  monkeytype_config.py  password_generator.py  testing.py  upload.py  upload_handler.py  validators.py
nhhc/portal/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
nhhc/portal/migrations/: 0001_initial.py  0002_payrollexception_rejection_reason_and_more.py
nhhc/portal/templates/: _unreviewed_client_requests.html  _unreviewed_employment_applications.html  annoucements.html  applicant-details.html  dashboard.html  profile.html  profile_main.html  service-inquiries.html  submission-details.html  submitted-applications.html
nhhc/portal/templatetags/: anonymize.py  human_readable.py  inclusion_tags.py  length_of_employment.py  profile_panel.py  replace_underscore.py  unreviewed_requests.py
nhhc/portal/tests/: test_feature_flags.py  test_models.py  test_validators.py  test_views.py
nhhc/static/css/: argon.css  cooming_soon.css  custom-portal-styles.css  style.css
nhhc/templates/: 400.html  403_csrf.html  404.html  404error.html  500.html  500error.html  503.html  about.html  client-interest.html  coming_soon.html  employee-interest.html  index.html  robots.txt  submission.html
nhhc/web/: apps.py  forms.py  models.py  sitemaps.py  tasks.py  test.py  urls.py  utils.py  views.py
(+397 files in other folders)
