[tool.poetry]
name = "nhhc"
version = "0.1.0"
license = "GNU3"
description = "Front-End website and web application for Nett Hands Home care"
authors = ["Terry Brooks, Jr. <Terry.Arthur@BrooksJr.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<=3.13"
Django = "5.1.4"
psycopg2-binary = "2.9.10"
django-crispy-forms = "2.3"
django-phonenumber-field = "7.3.0"
django-localflavor = "4.0"
whitenoise = "6.8.2"
gunicorn = "22.0.0"
six = "1.17.0"
supervisor = "4.2.5"
boto3 = "1.35.79"
django-recaptcha = "3.0.0"
django-cors-headers = "4.6.0"
loguru = "0.7.3"
django-ip-restriction = "1.1.1"
django-ipware = "5.0.2"
arrow = "1.3.0"
logtail-python = "0.2.10"
highlight-io = "0.7.1"
django-health-check = "3.18.3"
django-redis = "5.4.0"
django-loguru = "1.0.3"
django-request = "1.6.3"
django-prometheus = "2.3.1"
hiredis = "2.4.0"
django-redis-cache = "3.0.1"
django-storages = "1.14.4"
django-allauth = "0.60.1"
crispy-bootstrap5 = "2023.10"
django-widget-tweaks = "1.5.0"
djangorestframework = "3.15.2"
markdown = "3.7"
django-filter = "23.5"
python-magic = "0.4.27"
pip = "^24.0"
django-formset = "1.5.5"
django-robots = "6.1"
django-admin-env-notice = "1.0.1"
djlint = "1.36.3"
django-jazzmin = "2.6.2"
doppler-env = "0.3.1"
django-pgcrypto = "2.0.0"
django-appconf = "1.0.6"
django-bunny = "1.1.6"
django-pgcrypto-fields = "2.6.0"
django-sage-encrypt = "0.4.4"
prospector = "1.13.3"
django-extensions = "3.2.3"
django-weasyprint = "2.3.0"
weasyprint = "61.2"
reportlab = "4.2.5"
python-gnupg = "0.5.3"
django-anymail = "10.3"
django-tinymce = "4.1.0"
pyenchant = "3.2.2"
django-referrer-policy = "1.0"
celery = "5.4.0"
django-celery-results = "2.5.1"
flower = "2.0.1"
pymupdf = "1.25.1"
django-celery-beat = "2.7.0"
django-smtp-ssl = "1.0"
django-defender = "0.9.8"
werkzeug = "3.1.3"
pyopenssl = "24.3.0"
filemagic = "1.6"
filetype = "1.2.0"
django-progressbarupload = "0.1.7"
dj-database-url = "2.3.0"
kolo = "2.34.2"
guardian = "0.2.2"
django-mail-panel = "4.0.4"
django-require-login = "1.1.4"
django-cockroachdb = "5.1"
cherrypy = "18.10.0"
psutil = "6.1.0"
xargs = "0.5.0"
amqp = "5.3.1"
anyio = "4.7.0"
asgiref = "3.8.1"
astroid = "3.3.6"
attrs = "24.2.0"
autocommand = "2.2.2"
backoff = "2.2.1"
bandit = "1.8.0"
beautifulsoup4 = "4.12.3"
billiard = "4.2.1"
black = "24.10.0"
botocore = "1.35.79"
brotli = "1.1.0"
build = "1.2.2.post1"
cachecontrol = "0.14.1"
cerberus = "1.3.5"
certifi = "2024.8.30"
cffi = "1.17.1"
cfgv = "3.4.0"
chardet = "5.2.0"
charset-normalizer = "3.4.0"
cheroot = "10.0.1"
cleo = "2.1.0"
click = "8.1.7"
click-didyoumean = "0.3.1"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
coverage = "7.6.9"
crashtest = "0.4.1"
cron-descriptor = "1.4.5"
cryptography = "44.0.0"
cssbeautifier = "1.15.1"
cssselect2 = "0.7.0"
decorator = "5.1.1"
defusedxml = "0.7.1"
deprecated = "1.2.15"
dill = "0.3.9"
distlib = "0.3.9"
django-debug-toolbar = "4.4.6"
django-discover-runner = "1.0"
django-timezone-field = "7.0"
django-webtest = "1.9.12"
djhtml = "3.0.7"
docutils = "0.21.2"
dodgy = "0.2.1"
dulwich = "0.21.7"
editorconfig = "0.12.4"
factory-boy = "3.3.1"
faker = "22.7.0"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
flake8 = "7.1.1"
flake8-polyfill = "1.0.2"
fonttools = "4.55.3"
gitdb = "4.0.11"
gitpython = "3.1.43"
googleapis-common-protos = "1.66.0"
grpcio = "1.68.1"
h11 = "0.14.0"
html-tag-names = "0.1.2"
html-void-elements = "0.1.0"
html5lib = "1.1"
httpcore = "1.0.7"
httpx = "0.28.1"
humanize = "4.11.0"
identify = "2.6.3"
idna = "3.10"
importlib-metadata = "6.11.0"
iniconfig = "2.0.0"
installer = "0.7.0"
isort = "5.13.2"
jaraco-classes = "3.4.0"
jaraco-collections = "5.1.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jaraco-text = "4.0.0"
jinja2 = "3.1.5"
jmespath = "1.0.1"
jsbeautifier = "1.15.1"
json5 = "0.10.0"
keyring = "24.3.1"
kombu = "5.4.2"
legacy-cgi = "2.6.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
mccabe = "0.7.0"
mdurl = "0.1.2"
mock = "5.1.0"
mocket = "3.13.2"
model-bakery = "1.20.0"
more-itertools = "10.5.0"
msgpack = "1.1.0"
multidict = "6.1.0"
mypy = "1.13.0"
mypy-extensions = "1.0.0"
nodeenv = "1.9.1"
oauthlib = "3.2.2"
opentelemetry-api = "1.22.0"
opentelemetry-distro = "0.43b0"
opentelemetry-exporter-otlp = "1.22.0"
opentelemetry-exporter-otlp-proto-common = "1.22.0"
opentelemetry-exporter-otlp-proto-grpc = "1.22.0"
opentelemetry-exporter-otlp-proto-http = "1.22.0"
opentelemetry-instrumentation = "0.43b0"
opentelemetry-instrumentation-logging = "0.43b0"
opentelemetry-instrumentation-requests = "0.43b0"
opentelemetry-proto = "1.22.0"
opentelemetry-sdk = "1.22.0"
opentelemetry-semantic-conventions = "0.43b0"
opentelemetry-util-http = "0.43b0"
outcome = "1.3.0.post0"
packaging = "24.2"
pathspec = "0.12.1"
pbr = "6.1.0"
pep8-naming = "0.10.0"
pexpect = "4.9.0"
phonenumberslite = "8.13.51"
pillow = "11.0.0"
pkginfo = "1.12.0"
platformdirs = "4.3.6"
pluggy = "1.5.0"
poetry = "1.8.5"
poetry-core = "1.9.1"
poetry-plugin-export = "1.8.0"
portend = "3.2.0"
pre-commit = "3.8.0"
prometheus-client = "0.21.1"
prompt-toolkit = "3.0.48"
protobuf = "4.25.5"
ptyprocess = "0.7.0"
puremagic = "1.28"
pycodestyle = "2.12.1"
pycparser = "2.22"
pydocstyle = "6.3.0"
pydyf = "0.11.0"
pyflakes = "3.2.0"
pygments = "2.18.0"
pyjwt = "2.10.1"
pylint = "3.3.2"
pylint-celery = "0.3"
pylint-django = "2.6.1"
pylint-flask = "0.6"
pylint-plugin-utils = "0.8.2"
pyphen = "0.17.0"
pyproject-hooks = "1.2.0"
pyright = "1.1.390"
pyroma = "4.2"
pysocks = "1.7.1"
pytest = "8.3.4"
pytest-django = "4.9.0"
python-crontab = "3.2.0"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.0.1"
python-stdnum = "1.20"
python3-openid = "3.2.0"
pytz = "2024.2"
pyyaml = "6.0.2"
rapidfuzz = "3.10.1"
redis = "3.5.3"
regex = "2024.11.6"
requests = "2.32.3"
requests-oauthlib = "2.0.0"
requests-toolbelt = "1.0.0"
requirements-detector = "1.3.2"
rich = "13.9.4"
ruff = "0.8.2"
s3transfer = "0.10.4"
selenium = "4.27.1"
semver = "3.0.2"
setoptconf-tmp = "0.3.1"
setuptools = "75.6.0"
shellingham = "1.5.4"
smmap = "5.0.1"
sniffio = "1.3.1"
snowballstemmer = "2.2.0"
sortedcontainers = "2.4.0"
soupsieve = "2.6"
sqlglot = "26.0.0"
sqlparse = "0.5.3"
stevedore = "5.4.0"
tabulate = "0.9.0"
tblib = "3.0.0"
tempora = "5.7.0"
tinycss2 = "1.4.0"
toml = "0.10.2"
tomlkit = "0.13.2"
toolz = "1.0.0"
tornado = "6.4.2"
tqdm = "4.67.1"
trio = "0.27.0"
trio-websocket = "0.11.1"
trove-classifiers = "2024.10.21.16"
types-python-dateutil = "2.9.0.20241206"
typing-extensions = "4.12.2"
tzdata = "2024.2"
ulid-py = "1.1.0"
urllib3 = "2.2.3"
vine = "5.1.0"
virtualenv = "20.28.0"
vulture = "2.14"
waitress = "3.0.2"
wcwidth = "0.2.13"
webencodings = "0.5.1"
webob = "1.8.9"
websocket-client = "1.8.0"
webtest = "3.0.2"
wrapt = "1.17.0"
wsproto = "1.2.0"
xattr = "1.1.0"
zc-lockfile = "3.0.post1"
zipp = "3.21.0"
zopfli = "0.2.3.post1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
black = "^24.3.0"
djhtml = "^3.0.6"
isort = "^5.13.2"
djlint = "^1.31.1"
kolo = "^2.17.0"
django-debug-toolbar = "^4.2.0"
poetry-plugin-export = "^1.6.0"
bandit = "^1.7.8"

[tool.poetry.group.test.dependencies]
django-webtest = "^1.9.11"
coverage = "^7.3.4"
django-discover-runner = "^1.0"
mock = "^5.1.0"
model-bakery = "^1.17.0"
factory-boy = "^3.3.0"
selenium = "^4.16.0"
faker = "^22.0.0"
tblib = "^3.0.0"
pytest-django = "^4.7.0"
doppler-env = "^0.3.1"
isort = "^5.13.2"





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 200
target-version = ['py312']
extend-exclude = "nhhc/compliance/views.py, nhhc/nhhc/utils/upload.py"

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    ]
omit = [
    "*/migrations/*",
    ]
ignore_errors = true
skip_empty = true

[tool.djlint]
ignore="H021 H006"

[tool.pylint.messages_control]
max-line-length = 300

disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "line-too-long",
    "trailing-whitespace",
]

[tool.pytest.ini_options]
# -- recommended but optional:
python_files = ["test_*.py", "*_test.py", "testing/python/*.py"]

[tool.kolo]
use_rust = false
